--- a/cloud-webapp/pom.xml
+++ b/cloud-webapp/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>cloud-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>0.9.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>cloud-webapp</finalName>
