--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>1.2-RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.hope6537</groupId>
+            <artifactId>hope-hadoop-utils</artifactId>
+            <version>1.2-RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
             <version>1.7.6</version>
