--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -4,4 +4,6 @@ jdbc_url=jdbc:mysql://localhost:3306/cloudstroage?useUnicode=true&characterEncod
 jdbc_username=root
 jdbc_password=4236537
 runtime_type=single
-master=hdfs://hadoop2master:9000
+serverPath=C:/CoderWorkSpace/Java/CloudStroage/cloud-webapp/src/main/webapp/static/common/upload
+netURL=http://localhost:3030/CloudStroage/static/common/upload
+hdfsURL=hdfs://hadoop2master:9000
