[info #22]登录Controller完善，同时Hander增加返回包装类包裹的Hander

--- a/cloud-webapp/bower.json
+++ b/cloud-webapp/bower.json
@@ -31,7 +31,9 @@
     "blueimp-file-upload": "9.9.3",
     "x-editable": "1.5.1",
     "pace": "1.0.2",
-    "dropzone": "v4.0.0"
+    "cryptojslib": "3.1.2",
+    "dropzone": "v4.0.0",
+    "bootstrap-contextmenu": "0.3.2"
   }
 }
 
