--- a/cloud-webapp/bower.json
+++ b/cloud-webapp/bower.json
@@ -33,7 +33,8 @@
     "pace": "1.0.2",
     "cryptojslib": "3.1.2",
     "dropzone": "v4.0.0",
-    "bootstrap-contextmenu": "0.3.2"
+    "bootstrap-contextmenu": "0.3.2",
+	"hope6537-plugin":"0.2"
   }
 }
 
