--- a/cloud-webapp/bower.json
+++ b/cloud-webapp/bower.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "respond": "1.1.0",
+    "bootstrap-modal":"2.2.5",
     "jquery": "1.11.0",
     "jquery-migrate": "1.2.1",
     "jquery-ui": "1.10.3",
     "jquery-slimscroll": "1.3.2",
     "jquery-validation": "1.12.0",
     "jquery-backstretch": "2.0.4",
-    "DataTables": "1.10.3",
+    "datatables": "1.10.5",
     "ztree_v3": "3.5.16",
-    "bootstrap": "~3.2.0",
+    "bootstrap": "3.3.2",
     "bootstrap-switch": "3.0.0",
     "bootstrap-hover-dropdown": "2.0.11",
     "toastr": "2.0.1",
@@ -34,7 +35,7 @@
     "cryptojslib": "3.1.2",
     "dropzone": "v4.0.0",
     "bootstrap-contextmenu": "0.3.2",
-	"hope6537-plugin":"0.2"
+    "hope6537-plugin": "0.2"
   }
 }
 
