[info #33]重命名，文件上传完成

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ META-INF/
 target/
 logs/
 
+cloud-webapp/src/main/webapp/static/common/upload
 cloud-webapp/src/main/webapp/static/admin/img/upload
 cloud-webapp/src/main/webapp/static/front/img/upload
 cloud-webapp/src/main/webapp/static/common/img/upload
