[info #34]修复上传路径错误

--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -1,9 +1,12 @@
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://localhost:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
+jdbc_url=jdbc:mysql://jichuang:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
 jdbc_username=root
 jdbc_password=4236537
 runtime_type=single
 serverPath=C:/CoderWorkSpace/Java/CloudStroage/cloud-webapp/src/main/webapp/static/common/upload
-netURL=http://localhost:3030/CloudStroage/static/common/upload
-hdfsURL=hdfs://hadoop2master:9000
+hdfsPath=hdfs://jichuang:9000
+netPath=http://localhost:3030
+netURL=/CloudStroage/static/common/upload
+hdfsUrlPrefix=http://jichuang:50075/streamFile/
+hdfsUrlSuffix=?nnaddr=192.168.74.102:9000
