--- a/cloud-webapp/bower.json
+++ b/cloud-webapp/bower.json
@@ -35,7 +35,8 @@
     "cryptojslib": "3.1.2",
     "dropzone": "v4.0.0",
     "bootstrap-contextmenu": "0.3.2",
-    "hope6537-plugin": "0.2"
+    "hope6537-plugin": "0.2",
+    "simple-collection":"0.1.2"
   }
 }
 
