--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -8,5 +8,5 @@ serverPath=C:/CoderWorkSpace/Java/CloudStroage/cloud-webapp/src/main/webapp/stat
 hdfsPath=hdfs://jichuang:9000
 netPath=http://localhost:3030
 netURL=/CloudStroage/static/common/upload
-hdfsUrlPrefix=http://jichuang:50075/streamFile/
+hdfsUrlPrefix=http://jichuang:50075/streamFile
 hdfsUrlSuffix=?nnaddr=192.168.74.102:9000
