--- a/cloud-webapp/pom.xml
+++ b/cloud-webapp/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>CloudStroage</artifactId>
         <groupId>org.hope6537</groupId>
-        <version>0.2-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>cloud-webapp</artifactId>
