--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     </modules>
     <name>JiChuang CloudStroage</name>
 
+
     <properties>
         <hadoop.version>2.6.0</hadoop.version>
     </properties>
@@ -18,17 +19,17 @@
         <dependency>
             <groupId>org.hope6537</groupId>
             <artifactId>hope-basic-utils</artifactId>
-            <version>1.2-RELEASE</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.hope6537</groupId>
             <artifactId>hope-web-utils</artifactId>
-            <version>1.2-RELEASE</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.hope6537</groupId>
             <artifactId>hope-hadoop-utils</artifactId>
-            <version>1.2-RELEASE</version>
+            <version>1.2.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>tomcat</groupId>
