[info #47]hdfs path

--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -5,8 +5,8 @@ jdbc_username=root
 jdbc_password=passwd
 runtime_type=single
 serverPath=C:/CoderWorkSpace/Java/CloudStroage/cloud-webapp/src/main/webapp/static/common/upload
-hdfsPath=hdfs://jichuang:9000
+hdfsPath=hdfs://www.hope6537.com:9000
 netPath=http://localhost:3030
 netURL=/CloudStroage/static/common/upload
-hdfsUrlPrefix=http://jichuang:50075/streamFile
-hdfsUrlSuffix=?nnaddr=192.168.74.102:9000
+hdfsUrlPrefix=http://www.hope6537.com:50075/streamFile
+hdfsUrlSuffix=?nnaddr=www.hope6537.com:9000
