--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -1,12 +1,12 @@
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://jichuang:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
+jdbc_url=jdbc:mysql://www.hope6537.com:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
 jdbc_username=root
-jdbc_password=4236537
+jdbc_password=CcsD060yp9sCuqb3XKlkGN56DEuSmkZyxjBmXnEVrlU=
 runtime_type=single
-serverPath=C:/CoderWorkSpace/Java/CloudStroage/cloud-webapp/src/main/webapp/static/common/upload
-hdfsPath=hdfs://jichuang:9000
+serverPath=../upload
+hdfsPath=hdfs://www.hope6537.com:9000
 netPath=http://localhost:3030
 netURL=/CloudStroage/static/common/upload
-hdfsUrlPrefix=http://jichuang:50075/streamFile
-hdfsUrlSuffix=?nnaddr=192.168.74.102:9000
+hdfsUrlPrefix=http://www.hope6537.com:50075/streamFile
+hdfsUrlSuffix=?nnaddr=www.hope6537.com:9000
