--- a/pom.xml
+++ b/pom.xml
@@ -19,17 +19,17 @@
         <dependency>
             <groupId>org.hope6537</groupId>
             <artifactId>hope-basic-utils</artifactId>
-            <version>1.2.1</version>
+            <version>1.2-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.hope6537</groupId>
             <artifactId>hope-web-utils</artifactId>
-            <version>1.2.1</version>
+            <version>1.2-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.hope6537</groupId>
             <artifactId>hope-hadoop-utils</artifactId>
-            <version>1.2.1</version>
+            <version>1.2-RELEASE</version>
             <exclusions>
                 <exclusion>
                     <groupId>tomcat</groupId>
