[change prefix and suffix]

--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -8,5 +8,5 @@ serverPath=../upload
 hdfsPath=hdfs://www.hope6537.com:9000
 netPath=http://localhost:3030
 netURL=/CloudStroage/static/common/upload
-hdfsUrlPrefix=http://www.hope6537.com:50075/streamFile
-hdfsUrlSuffix=?nnaddr=www.hope6537.com:9000
+hdfsUrlPrefix=http://www.hope6537.com:50070/webhdfs/v1
+hdfsUrlSuffix=?op=OPEN
