[sql和初始化脚本]

--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://www.hope6537.com:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
+jdbc_url=jdbc:mysql://mirrors.hope6537.com:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
 jdbc_username=root
-jdbc_password=CcsD060yp9sCuqb3XKlkGN56DEuSmkZyxjBmXnEVrlU=
+jdbc_password=IEUwU+VXCQFWggGLoPQhFWtuDIfBjwvaV72F3+erAMI=
 runtime_type=single
 serverPath=../upload
 hdfsPath=hdfs://www.hope6537.com:9000
