--- a/cloud-webapp/src/main/resources/config.properties
+++ b/cloud-webapp/src/main/resources/config.properties
@@ -1,12 +1,12 @@
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://mirrors.hope6537.com:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
+jdbc_url=jdbc:mysql://data.hope6537.com:3306/cloudstroage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
 jdbc_username=root
-jdbc_password=IEUwU+VXCQFWggGLoPQhFWtuDIfBjwvaV72F3+erAMI=
+jdbc_password=rM8XJQ1j2g4Vewh3xzU1/ACFl5pOS9WETi+ujA49Ldw=
 runtime_type=single
 serverPath=../upload
-hdfsPath=hdfs://www.hope6537.com:9000
+hdfsPath=hdfs://data.hope6537.com:9000
 netPath=http://localhost:3030
 netURL=/CloudStroage/static/common/upload
-hdfsUrlPrefix=http://www.hope6537.com:50075/streamFile
-hdfsUrlSuffix=?nnaddr=www.hope6537.com:9000
+hdfsUrlPrefix=http://data.hope6537.com:50075/streamFile
+hdfsUrlSuffix=?nnaddr=data.hope6537.com:9000
