--- a/cloud-webapp/bower.json
+++ b/cloud-webapp/bower.json
@@ -26,7 +26,7 @@
     "echarts": "2.2.1",
     "bootstrap-gtreetable": "v2.2.1-alpha",
     "flot": "v0.8.3",
-    "jqvmap": "jqvmap_v1.1",
+    "jqvmap": "1.5.0",
     "fullcalendar": "v2.3.1",
     "fancybox": "v2.1.5",
     "blueimp-file-upload": "9.9.3",
@@ -36,7 +36,6 @@
     "dropzone": "v4.0.0",
     "bootstrap-contextmenu": "0.3.2",
     "hope6537-plugin": "0.4",
-    "simple-collection": "0.1.2",
     "zeroclipboard": "2.2.0"
   }
 }
